[gd_scene load_steps=6 format=3 uid="uid://cjq4o4h10u8yo"]

[ext_resource type="Script" path="res://redefine_keys.gd" id="1_gt82l"]
[ext_resource type="Theme" uid="uid://dva1lk32kcccy" path="res://UI/jurl-theme.tres" id="2_xw7oq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8aaiq"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spglt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vemv1"]

[node name="RedefineKeys" type="Node2D"]
script = ExtResource("1_gt82l")

[node name="Label" type="Label" parent="."]
offset_left = 120.0
offset_top = 165.0
offset_right = 1392.0
offset_bottom = 228.0
theme = ExtResource("2_xw7oq")
theme_override_colors/font_color = Color(0.945098, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "PRESS KEY FOR ROTATE LEFT"

[node name="Label2" type="Label" parent="."]
offset_left = 121.0
offset_top = 381.0
offset_right = 1393.0
offset_bottom = 444.0
theme = ExtResource("2_xw7oq")
theme_override_colors/font_color = Color(0.945098, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "PRESS KEY FOR ROTATE RIGHT"

[node name="Label3" type="Label" parent="."]
offset_left = 117.0
offset_top = 611.0
offset_right = 1389.0
offset_bottom = 674.0
theme = ExtResource("2_xw7oq")
theme_override_colors/font_color = Color(0.945098, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "PRESS KEY FOR THRUST
"

[node name="LeftLabel" type="Label" parent="."]
offset_left = 1501.0
offset_top = 152.0
offset_right = 1801.0
offset_bottom = 235.0
theme = ExtResource("2_xw7oq")
theme_override_colors/font_color = Color(0.945098, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "LEFT
"
horizontal_alignment = 3

[node name="RightLabel" type="Label" parent="."]
offset_left = 1501.0
offset_top = 366.0
offset_right = 1876.0
offset_bottom = 449.0
theme = ExtResource("2_xw7oq")
theme_override_colors/font_color = Color(0.945098, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "RIGHT
"
horizontal_alignment = 3

[node name="ThrustLabel" type="Label" parent="."]
offset_left = 1501.0
offset_top = 597.0
offset_right = 1876.0
offset_bottom = 680.0
theme = ExtResource("2_xw7oq")
theme_override_colors/font_color = Color(0.945098, 0, 0, 1)
theme_override_font_sizes/font_size = 80
text = "UP
"
horizontal_alignment = 3

[node name="CancelButton" type="Button" parent="."]
offset_left = 88.0
offset_top = 838.0
offset_right = 510.0
offset_bottom = 988.0
focus_neighbor_right = NodePath("../OKButton")
focus_next = NodePath("../OKButton")
theme = ExtResource("2_xw7oq")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_8aaiq")
theme_override_styles/focus = SubResource("StyleBoxFlat_spglt")
text = "CANCEL"

[node name="ClearButton" type="Button" parent="."]
offset_left = 770.0
offset_top = 838.0
offset_right = 1192.0
offset_bottom = 988.0
focus_neighbor_right = NodePath("../OKButton")
focus_next = NodePath("../OKButton")
theme = ExtResource("2_xw7oq")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_8aaiq")
theme_override_styles/focus = SubResource("StyleBoxFlat_spglt")
text = "CLEAR"

[node name="OKButton" type="Button" parent="."]
offset_left = 1427.0
offset_top = 840.0
offset_right = 1849.0
offset_bottom = 990.0
focus_neighbor_left = NodePath("../CancelButton")
focus_previous = NodePath("../CancelButton")
theme = ExtResource("2_xw7oq")
theme_override_colors/font_color = Color(0, 0.760784, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_8aaiq")
theme_override_styles/focus = SubResource("StyleBoxFlat_vemv1")
text = "OK"

[connection signal="pressed" from="CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="OKButton" to="." method="_on_ok_button_pressed"]
